RESOLVED FIXED269988
REGRESSION(274824@main): [MSE][GStreamer][Debug] SHOULD NEVER BE REACHED in MediaPlayerPrivateGStreamerMSE::buffered()
https://bugs.webkit.org/show_bug.cgi?id=269988
Summary REGRESSION(274824@main): [MSE][GStreamer][Debug] SHOULD NEVER BE REACHED in M...
Vitaly Dyackhov
Reported 2024-02-23 06:58:30 PST
Stack trace: #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:351 #1 0x00007f9a9d691610 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:780 #2 0x00007f9aa6162e9e in WebCore::MediaPlayerPrivateGStreamerMSE::buffered() const (this=0x7f9a8131f480) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:310 #3 0x00007f9aa5ef83fb in WebCore::MediaPlayerPrivateInterface::extraMemoryCost() const (this=0x7f9a8131f480) at /app/webkit/Source/WebCore/platform/graphics/MediaPlayerPrivate.h:299 #4 0x00007f9aa5eee1b3 in WebCore::MediaPlayer::extraMemoryCost() const (this=0x7f9a81310d20) at /app/webkit/Source/WebCore/platform/graphics/MediaPlayer.cpp:1695 #5 0x00007f9aa4f531ff in WebCore::HTMLMediaElement::pauseAfterDetachedTask() (this=0x7f9a21006f60) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:940 #6 0x00007f9aa4f532cd in operator()() const (__closure=0x7f9a81745dd8) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:962 #7 0x00007f9aa4f8de30 in WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::removedFromAncestor(WebCore::Node::RemovalType, WebCore::ContainerNode&)::<lambda()>, void>::call(void) (this=0x7f9a81745dd0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #8 0x00007f9a9e0e1311 in WTF::Function<void ()>::operator()() const (this=0x7f9a8162ae78) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #9 0x00007f9aa4f939d8 in WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}::operator()() const (__closure=0x7f9a8162ae68) at /app/webkit/Source/WebCore/dom/ActiveDOMObject.h:112 #10 0x00007f9aa4fcae0c in WTF::Detail::CallableWrapper<WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}, void>::call() (this=0x7f9a8162ae60) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #11 0x00007f9a9e0e1311 in WTF::Function<void ()>::operator()() const (this=0x7f9a816a75c0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #12 0x00007f9aa4ab0822 in WebCore::EventLoopFunctionDispatchTask::execute() (this=0x7f9a816a75a0) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:469 #13 0x00007f9aa4aac103 in WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) (this=0x7f9a81146730, deadline=std::optional<WTF::ApproximateTime> = {...}) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:327 #14 0x00007f9aa4ca4195 in WebCore::WindowEventLoop::didReachTimeToRun() (this=0x7f9a81146730) at /app/webkit/Source/WebCore/dom/WindowEventLoop.cpp:193 #15 0x00007f9aa4cbecf2 in std::__invoke_impl<void, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(std::__invoke_memfun_deref, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__f=@0x7f9a81369748: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f9aa4ca40fc <WebCore::WindowEventLoop::didReachTimeToRun()>, __t=@0x7f9a81369758: 0x7f9a81146730) at /usr/include/c++/13.2.0/bits/invoke.h:74 #16 0x00007f9aa4cbec5d in std::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__fn=@0x7f9a81369748: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f9aa4ca40fc <WebCore::WindowEventLoop::didReachTimeToRun()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #17 0x00007f9aa4cbebd3 in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f9a81369748, __args=...) at /usr/include/c++/13.2.0/functional:506 #18 0x00007f9aa4cbeb65 in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::operator()<, void>() (this=0x7f9a81369748) at /usr/include/c++/13.2.0/functional:591 #19 0x00007f9aa4cbeb2e in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>, void>::call() (this=0x7f9a81369740) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #20 0x00007f9a9e0e1311 in WTF::Function<void ()>::operator()() const (this=0x7f9a81146858) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #21 0x00007f9a9e1f2dea in WebCore::Timer::fired() (this=0x7f9a81146820) at /app/webkit/WebKitBuild/WPE/Debug/WebCore/PrivateHeaders/WebCore/Timer.h:159 #22 0x00007f9aa5c9e16e in WebCore::ThreadTimers::sharedTimerFiredInternal() (this=0x7f9a810f4f30) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:125 #23 0x00007f9aa5c9da4b in operator()() const (__closure=0x7f9a81000e38) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:65 #24 0x00007f9aa5ca805a in WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::<lambda()>, void>::call(void) (this=0x7f9a81000e30) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #25 0x00007f9a9e0e1311 in WTF::Function<void ()>::operator()() const (this=0x7f9aa8351bc8 <WebCore::MainThreadSharedTimer::singleton()::instance+8>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #26 0x00007f9aa5c41416 in WebCore::MainThreadSharedTimer::fired() (this=0x7f9aa8351bc0 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /app/webkit/Source/WebCore/platform/MainThreadSharedTimer.cpp:83 #27 0x00007f9aa5c4b17e in std::__invoke_impl<void, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(std::__invoke_memfun_deref, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__f=@0x7f9a810ea088: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f9aa5c4138e <WebCore::MainThreadSharedTimer::fired()>, __t=@0x7f9a810ea098: 0x7f9aa8351bc0 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /usr/include/c++/13.2.0/bits/invoke.h:74 #28 0x00007f9aa5c4b0f7 in std::__invoke<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__fn=@0x7f9a810ea088: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f9aa5c4138e <WebCore::MainThreadSharedTimer::fired()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #29 0x00007f9aa5c4b06d in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f9a810ea088, __args=...) at /usr/include/c++/13.2.0/functional:506 #30 0x00007f9aa5c4afff in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::operator()<, void>() (this=0x7f9a810ea088) at /usr/include/c++/13.2.0/functional:591 #31 0x00007f9aa5c4afc8 in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>, void>::call() (this=0x7f9a810ea080) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #32 0x00007f9a9e0e1311 in WTF::Function<void ()>::operator()() const (this=0x7f9aa8351bf8 <WebCore::MainThreadSharedTimer::singleton()::instance+56>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #33 0x00007f9a9e1f2f2e in WTF::RunLoop::Timer::fired() (this=0x7f9aa8351bd0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RunLoop.h:195 #34 0x00007f9aa16f6d69 in operator()(gpointer) const (__closure=0x0, userData=0x7f9aa8351bd0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #35 0x00007f9aa16f6da9 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:181 #36 0x00007f9aa16f62a5 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x555b06ec06d0, callback=0x7f9aa16f6d8c <_FUN(gpointer)>, userData=0x7f9aa8351bd0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #37 0x00007f9aa16f62f3 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #38 0x00007f9a922efd36 in g_main_dispatch (context=0x555b069ec120) at ../glib/gmain.c:3460 #39 g_main_context_dispatch (context=0x555b069ec120) at ../glib/gmain.c:4200 #40 0x00007f9a9234d2b8 in g_main_context_iterate.isra.0 (context=0x555b069ec120, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #41 0x00007f9a922ef3ff in g_main_loop_run (loop=0x555b069ec260) at ../glib/gmain.c:4479 #42 0x00007f9aa16f696e in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #43 0x00007f9a9f12b7bb in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffdbaf88320, argc=4, argv=0x7ffdbaf884e8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #44 0x00007f9a9f12b612 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffdbaf884e8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #45 0x00007f9a9f12b519 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffdbaf884e8) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:83 #46 0x0000555b061428c9 in main(int, char**) (argc=4, argv=0x7ffdbaf884e8) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31
Attachments
Vitaly Dyackhov
Comment 1 2024-02-23 07:21:04 PST
EWS
Comment 2 2024-02-26 06:16:42 PST
Committed 275317@main (df3b091edfba): <https://commits.webkit.org/275317@main> Reviewed commits have been landed. Closing PR #25012 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-26 06:17:16 PST
Note You need to log in before you can comment on or make changes to this bug.