REGRESSION(274824@main): [MSE][GStreamer][Debug] SHOULD NEVER BE REACHED in MediaPlayerPrivateGStreamerMSE::buffered() https://bugs.webkit.org/show_bug.cgi?id=269988

Reviewed by Philippe Normand.

`MediaPlayerPrivateGStreamerMSE` should overload `extraMemoryCost()` and
return 0, as `MediaPlayerPrivateMediaSourceAVFObjC` already does.

* Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::extraMemoryCost const):
* Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.h:

Canonical link: https://commits.webkit.org/275317@main